Added pancurses for a nicer visual representation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Sindre Stephansen <sindre@sindrestephansen.com>"]
 
 [dependencies]
 chess = { path = "../chess", version = "0.1.0" }
+pancurses = "0.3.0"
