Updated the chess library dependency to download from github.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 authors = ["Sindre Stephansen <sindre@sindrestephansen.com>"]
 
 [dependencies]
-chess = { path = "../chess", version = "0.1.0" }
+chess = { git = "https://github.com/kalkins/rust_chess"}
 pancurses = "0.4.*"
